fix: use Collectors.toList() for Jackson compatibility in Redis. root cause: Stream.toList() returns a final class, causing Jackson NON_FINAL typing to omit `@class` metadata. Changed to .collect(Collectors.toList()) to ensure proper serialization/deserialization in Redis.