@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class EquipmentService {
@@ -26,7 +27,7 @@ public class EquipmentService {
         return equipmentRepository.findAll()
             .stream()
             .map(EquipmentDTO::from)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public void recordCacheHit() {
